# OurPresent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  app.py  auth.py  db.py  main.py  pyproject.toml
.streamlit/: config.toml
backend/: auth_manager.py  db_manager.py  session_manager.py
backend/api/: __init__.py
backend/config/: settings.py
backend/domain/: __init__.py
backend/infrastructure/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_couples.py  test_domain_and_db.py  test_llm_client.py  test_maintenance_ai_media.py  test_report_generation_pipeline.py  test_report_metrics_and_policies.py  test_report_scheduling_and_tick.py  test_reports.py  test_sessions.py  test_streamlit_page_gates.py
core/: agent_skills.py  config.py  state_machine.py
docs/: AI.md  ARCHITECTURE.md  AUDIT.md  DIRECTION.md  E2EE.md  PHASE2.md  PRD.md  README.md  ROADMAP.md  STATUS.md  api-contracts.md  data-model.md  extension-guide.md  phase2_audit.md  state-machines.md  synth-user-guide.md  technical-report.md  user-guide.md  weekly_report.md
docs/api/: app_auth.md  app_couple.md  app_maintenance.md  app_reports.md  app_sessions.md  config.md  domain_models.md  frontend_streamlit.md  infra_ai.md  main.md  (+2 more)
frontend/: components.py
miniprogram/: .gitignore  README.md  package-lock.json  package.json  project.config.json  project.config.json.example  project.private.config.json  tsconfig.json
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: main.py
server/nginx/: nginx.conf
tools/: __init__.py
utils/: file_processor.py  validators.py
(+136 files in other folders)
