[project]
name = "ourpresent"
version = "3.1.0"
description = "A local Streamlit demo for private couple memory sharing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=4,<5",
    "opencv-python>=4,<5",
    "pillow>=9",
    "streamlit>=1.28",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false
default-groups = ["dev"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tools/synth/tests"]
pythonpath = ["."]
addopts = "--cov=backend --cov-report=term-missing"

[tool.coverage.run]
omit = ["backend/tests/*"]
