[project]
name = "ourpresent-server"
version = "0.1.0"
description = "OurPresent Phase 2 · FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aioboto3>=13",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.11",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
